[package]
name = "result_float"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
license = "MIT/Apache-2.0"
description = "Floating point type that cannot store NaN"
keywords = ["no_std"]
categories = ["no-std"]

[badges]
gitlab = { repository = "KonradBorowski/result_float" }

[dependencies.num-traits]
version = "0.2.4"
default-features = false

[dependencies.failure]
version = "0.1.1"
default-features = false
features = ["derive"]

[features]
default = ["std"]
std = ["num-traits/std"]
