[package]
name = "result_float"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
repository = "https://gitlab.com/KonradBorowski/result_float"
license = "MIT/Apache-2.0"
description = "Floating point type that cannot store NaN"
documentation = "https://docs.rs/result_float"
keywords = ["no_std"]
categories = ["no-std"]

[badges]
gitlab = { repository = "KonradBorowski/result_float" }
maintenance = { status = "actively-developed" }

[dependencies.failure_derive]
version = "0.1.1"
default-features = false

[dependencies.num-traits]
version = "0.2.4"
default-features = false

[dependencies.failure]
version = "0.1.1"
default-features = false

[dependencies.serde]
version = "1.0.66"
default-features = false
optional = true

[dev-dependencies]
serde_test = "1.0.66"
quickcheck = "0.6.2"

[features]
default = ["std"]
std = ["num-traits/std"]

[package.metadata.docs.rs]
features = ["serde"]
